--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="ECS\ECS.h" />
     <ClInclude Include="ECS\FoodComponent.h" />
     <ClInclude Include="ECS\HungerComponent.h" />
+    <ClInclude Include="ECS\InventoryComponent.h" />
     <ClInclude Include="ECS\KeyboardController.h" />
     <ClInclude Include="ECS\TransformComponent.h" />
     <ClInclude Include="ECS\SpriteComponent.h" />
