--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="ECS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Debug helper\DebugFuncs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ECS\InventoryComponent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Debug helper\DebugFuncs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
