--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -142,6 +142,7 @@
   <ItemGroup>
     <ClCompile Include="AssetsManager.cpp" />
     <ClCompile Include="Collision.cpp" />
+    <ClCompile Include="Debug helper\DebugFuncs.cpp" />
     <ClCompile Include="ECS.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
@@ -155,6 +156,7 @@
   <ItemGroup>
     <ClInclude Include="AssetsManager.h" />
     <ClInclude Include="Collision.h" />
+    <ClInclude Include="Debug helper\DebugFuncs.h" />
     <ClInclude Include="ECS\ColliderComponent.h" />
     <ClInclude Include="ECS\Components.h" />
     <ClInclude Include="ECS\DialogtextComponent.h" />
