--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="ECS\HungerComponent.h" />
     <ClInclude Include="ECS\InventoryComponent.h" />
     <ClInclude Include="ECS\KeyboardController.h" />
+    <ClInclude Include="ECS\ProgressbarComponent.h" />
     <ClInclude Include="ECS\TransformComponent.h" />
     <ClInclude Include="ECS\SpriteComponent.h" />
     <ClInclude Include="Vector2D.h" />
