--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="Debug helper\DebugFuncs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="InventoryComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
